# speedtest

./: .gitignore  Dockerfile  README.md  best_tower_detection_model.h5  best_tower_model.h5  best_tower_model_v2.h5  final_tower_detection_model.h5  tower_detection_model_v4.h5
.github/workflows/: test.yml
Backend/: DOCKERFILE  app.py  conda-requirements.txt  model.py  model_v1.py  model_v2.py  model_v3.py  model_v3_predict.py  model_v4.py  model_v5.py  model_v6.py  modelv1.py  recognize.py  requirements.txt  test_api_random_image.py  test_api_sequential.py
Backend/test_scripts/: test_api.py  test_api_random_image.py
BlockChain/: Block.cpp  Block.h  BlockChain  BlockChain.cpp  BlockChain.h  CMakeLists.txt  MPIMiner.cpp  MiningPool.h  P2PClient.cpp  P2PClient.h  README.md  blockchain.json  main.cpp  mpihello  mpihello.cpp  probabilities.txt
DSLCity/: build.gradle.kts  out.json  settings.gradle.kts  test.txt
Data/: bounding_boxes_list.json  label_map.pbtxt
MQTTBroker/: .gitignore  mqtt-subscriber.js  package-lock.json  package.json  test-mqqt.js
MQTTBroker/Broker/: Dockerfile  mqtt-broker.js  package-lock.json  package.json
MQTTBroker/Subscriber/: Dockerfile  package.json  (+3 more)
MobileApp/: settings.gradle.kts
SpeedTestClient/: .gitignore  build.gradle.kts  settings.gradle.kts  speedData.csv
SpeedTestGameClient/: .gitignore  README.md  build.gradle  gradle.properties
TowerRecognition/: load_data.py  main.py
WebService/: .env  Dockerfile  app.js  client.js  nodemon.json  package-lock.json  package.json
website/: Dockerfile  package-lock.json  package.json
(+297 files in other folders)
